--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_16.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_16.cshtml
@@ -78,7 +78,7 @@
 {{/if}}
 <ul>
     <li>
-        De la revisión de lo evidenciado en campo, se advierte que el/la administrado (a) no declaró ante la autoridad el aprovechamiento de un volumen de xxxx m3
+        De la revisión de lo evidenciado en campo, se advierte que el/la administrado (a) no declaró ante la autoridad el aprovechamiento de un volumen de xxxx m<sup>3</sup>
         <a style="mso-footnote-id: foot_infraccion_16_1" href="#_foot_infraccion_16_1" title="">
             <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
         </a>, correspondiente a las especies xxxx, tal como se muestra en el siguiente cuadro:
@@ -93,7 +93,7 @@
         </a>
     </li>
     <li>
-        En consecuencia, teniendo en cuenta que la vigencia del Permiso Forestal fue desde el día <strong>xxxxxx hasta el xxxx</strong> y que según el Balance de Extracción y Forma 20 de fecha <strong>xxxxx</strong> el/la administrado (a) no había declarado el volumen de xxxxxm3; se concluye que se encuentra incumpliendo con lo establecido en la cláusula séptima del Permiso Forestal N° <strong>xxxxxxx</strong>
+        En consecuencia, teniendo en cuenta que la vigencia del Permiso Forestal fue desde el día <strong>xxxxxx hasta el xxxx</strong> y que según el Balance de Extracción y Forma 20 de fecha <strong>xxxxx</strong> el/la administrado (a) no había declarado el volumen de xxxxx m<sup>3</sup>; se concluye que se encuentra incumpliendo con lo establecido en la cláusula séptima del Permiso Forestal N° <strong>xxxxxxx</strong>
         <a style="mso-footnote-id: foot_infraccion_16_3" href="#_foot_infraccion_16_3" title="">
             <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
         </a>.
