--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/_tmplRDInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/_tmplRDInforme.cshtml
@@ -26,7 +26,7 @@
                     <tr>
                         <td style="vertical-align: top;"><strong>REFERENCIA</strong></td>
                         <td style="width: 30px; vertical-align: top;">:</td>
-                        <td style="vertical-align: top;">Informe Final de Instrucción N° ${NRO_REFERENCIA || '000XX-20XX-OSINFOR/08.2.1'}</td>
+                        <td style="vertical-align: top;">Informe Final de Instrucción N° ${ANTECEDENTES_DOCS.Inf_Sup.numero || '000XX-20XX-OSINFOR/08.2.1'}</td>
                     </tr>
                 </tbody>
             </table>
